--- a/Project Resume 09122021/resume analysis.ipynb
+++ b/Project Resume 09122021/resume analysis.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "unlike-grenada",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +53,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "understood-payroll",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +84,6 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "proud-shoulder",
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +730,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "alive-carrier",
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +751,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "amended-engagement",
    "metadata": {},
    "outputs": [
     {
@@ -1230,7 +1225,6 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "heavy-fence",
    "metadata": {
     "scrolled": false
    },
@@ -1269,7 +1263,6 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "african-junior",
    "metadata": {},
    "outputs": [
     {
@@ -1290,7 +1283,6 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "appreciated-mozambique",
    "metadata": {
     "scrolled": true
    },
@@ -1984,7 +1976,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "paperback-philippines",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1994,7 +1985,6 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "broadband-mapping",
    "metadata": {},
    "outputs": [
     {
@@ -2031,7 +2021,6 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "desperate-jewelry",
    "metadata": {},
    "outputs": [
     {
@@ -2660,7 +2649,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2674,7 +2663,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
