--- a/Project Resume 09122021/resume analysis.ipynb
+++ b/Project Resume 09122021/resume analysis.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "67126e44",
    "metadata": {},
    "outputs": [
     {
@@ -53,6 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "9c0531d4",
    "metadata": {},
    "outputs": [
     {
@@ -84,6 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
+   "id": "46e6a83d",
    "metadata": {},
    "outputs": [
     {
@@ -730,6 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "8d5c2efa",
    "metadata": {},
    "outputs": [
     {
@@ -751,6 +755,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
+   "id": "5302a3ab",
    "metadata": {},
    "outputs": [
     {
@@ -1225,6 +1230,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
+   "id": "06d7a81f",
    "metadata": {
     "scrolled": false
    },
@@ -1263,6 +1269,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
+   "id": "f83ba4ef",
    "metadata": {},
    "outputs": [
     {
@@ -1283,6 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
+   "id": "edf4e987",
    "metadata": {
     "scrolled": true
    },
@@ -1976,6 +1984,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ac2b8f82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1985,6 +1994,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
+   "id": "a6b8e128",
    "metadata": {},
    "outputs": [
     {
@@ -2021,6 +2031,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
+   "id": "1fef4b6a",
    "metadata": {},
    "outputs": [
     {
@@ -2649,7 +2660,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2663,7 +2674,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
