--- a/26 Suresh/Disease Prediction based on Symtoms by kiran 1.ipynb
+++ b/26 Suresh/Disease Prediction based on Symtoms by kiran 1.ipynb
@@ -6173,7 +6173,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -6187,7 +6187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
