--- a/nama/Kalman_Filter_22Apr2022.ipynb
+++ b/nama/Kalman_Filter_22Apr2022.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "6fecee26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +17,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c1d386f4",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +49,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "90c3b97a",
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +92,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "dc3ba524",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +129,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b238ee8e",
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +181,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f4db5808",
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +314,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -334,7 +328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
