--- a/26 Suresh/Disease Prediction based on Symtoms by kiran.ipynb
+++ b/26 Suresh/Disease Prediction based on Symtoms by kiran.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "6c294a72",
    "metadata": {},
    "source": [
     "# Disease Prediction based on Symtoms"
@@ -10,6 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
+   "id": "c63598bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,6 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "b8742794",
    "metadata": {
     "scrolled": true
    },
@@ -264,6 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "cd6c9bd6",
    "metadata": {},
    "outputs": [
     {
@@ -284,6 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "e57be4ea",
    "metadata": {},
    "outputs": [
     {
@@ -306,6 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "305301fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,6 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "c7613fb2",
    "metadata": {},
    "outputs": [
     {
@@ -446,6 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "030052f8",
    "metadata": {},
    "outputs": [
     {
@@ -766,6 +774,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "3954658b",
    "metadata": {
     "scrolled": true
    },
@@ -3311,6 +3320,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "41b1d573",
    "metadata": {},
    "outputs": [
     {
@@ -3535,6 +3545,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "0ea61d40",
    "metadata": {},
    "outputs": [
     {
@@ -3560,6 +3571,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "a48311b0",
    "metadata": {},
    "outputs": [
     {
@@ -3590,6 +3602,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "99a7ce21",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3597,6 +3610,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "b37f27d4",
    "metadata": {},
    "outputs": [
     {
@@ -3614,6 +3628,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "29dd93e6",
    "metadata": {},
    "outputs": [
     {
@@ -3839,6 +3854,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
+   "id": "ad6b173b",
    "metadata": {},
    "outputs": [
     {
@@ -3878,6 +3894,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
+   "id": "2d03b48a",
    "metadata": {},
    "outputs": [
     {
@@ -4103,6 +4120,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
+   "id": "d9e3aad0",
    "metadata": {},
    "outputs": [
     {
@@ -4125,6 +4143,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
+   "id": "850318f6",
    "metadata": {},
    "outputs": [
     {
@@ -4186,6 +4205,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
+   "id": "6d8f609a",
    "metadata": {},
    "outputs": [
     {
@@ -4222,6 +4242,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
+   "id": "a6a917af",
    "metadata": {},
    "outputs": [
     {
@@ -4632,6 +4653,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "afbab80d",
    "metadata": {
     "scrolled": true
    },
@@ -4646,6 +4668,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
+   "id": "b3effd3a",
    "metadata": {},
    "outputs": [
     {
@@ -4667,6 +4690,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
+   "id": "69a03078",
    "metadata": {},
    "outputs": [
     {
@@ -4832,6 +4856,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
+   "id": "0568b959",
    "metadata": {},
    "outputs": [
     {
@@ -5148,6 +5173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0188b594",
    "metadata": {
     "scrolled": true
    },
@@ -5160,6 +5186,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
+   "id": "a9e9f54b",
    "metadata": {},
    "outputs": [
     {
@@ -5419,6 +5446,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
+   "id": "7947c310",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5432,6 +5460,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
+   "id": "3ee16aae",
    "metadata": {},
    "outputs": [
     {
@@ -5452,6 +5481,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
+   "id": "51bdd063",
    "metadata": {},
    "outputs": [
     {
@@ -5473,6 +5503,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
+   "id": "c810884a",
    "metadata": {},
    "outputs": [
     {
@@ -5497,6 +5528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f25d2702",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5510,6 +5542,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "615eaffd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5517,6 +5550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "593f85e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5527,6 +5561,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8b8fe416",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5537,6 +5572,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "df4b438b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5546,6 +5582,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "555f7565",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5557,6 +5594,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2b29b43a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5564,6 +5602,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2fc8e2bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5574,6 +5613,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3579eec3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5584,6 +5624,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "604d6d4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5593,6 +5634,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8ea5e5e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5604,6 +5646,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3e470ee6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5611,6 +5654,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0622831a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5628,6 +5672,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "612e2591",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5635,6 +5680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0d7b4b2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5652,6 +5698,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cec8972a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5669,6 +5716,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "33b2aef5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5686,6 +5734,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0fd80360",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5693,6 +5742,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
+   "id": "f56c0571",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5706,6 +5756,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
+   "id": "e27d119f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5725,6 +5776,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
+   "id": "44739fb9",
    "metadata": {},
    "outputs": [
     {
@@ -5749,6 +5801,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
+   "id": "b58fde47",
    "metadata": {},
    "outputs": [
     {
@@ -5774,6 +5827,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bcca9e92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5783,6 +5837,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
+   "id": "bb47406b",
    "metadata": {},
    "outputs": [
     {
@@ -5805,6 +5860,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
+   "id": "f22c788d",
    "metadata": {},
    "outputs": [
     {
@@ -5825,6 +5881,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
+   "id": "92f34d65",
    "metadata": {},
    "outputs": [
     {
@@ -5852,6 +5909,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "972a0a15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5861,6 +5919,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "75dea33b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5870,6 +5929,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "88c446dc",
    "metadata": {
     "scrolled": false
    },
@@ -5882,6 +5942,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "de48466c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5891,6 +5952,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e58aac60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5900,6 +5962,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e2410fa8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5909,6 +5972,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1fed21f5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5916,7 +5980,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -5930,7 +5994,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
