15062022 - study link update
15062022 - study link update

--- a/Project POMO/data scraping/Model Building.ipynb
+++ b/Project POMO/data scraping/Model Building.ipynb
@@ -4746,7 +4746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4756,11 +4756,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/50\n",
+      "93/93 [==============================] - 7s 25ms/step - loss: 0.5276 - accuracy: 0.3651 - val_loss: 0.4105 - val_accuracy: 0.8314\n",
+      "Epoch 2/50\n",
+      "93/93 [==============================] - 1s 12ms/step - loss: 0.3866 - accuracy: 0.8533 - val_loss: 0.3381 - val_accuracy: 0.8314\n",
+      "Epoch 3/50\n",
+      "93/93 [==============================] - 1s 12ms/step - loss: 0.2926 - accuracy: 0.8533 - val_loss: 0.2977 - val_accuracy: 0.8314\n",
+      "Epoch 4/50\n",
+      "93/93 [==============================] - 1s 12ms/step - loss: 0.2803 - accuracy: 0.8533 - val_loss: 0.2652 - val_accuracy: 0.8314\n",
+      "Epoch 5/50\n",
+      "93/93 [==============================] - 1s 12ms/step - loss: 0.2572 - accuracy: 0.8553 - val_loss: 0.2783 - val_accuracy: 0.8203\n",
+      "Epoch 6/50\n",
+      "93/93 [==============================] - 1s 12ms/step - loss: 0.2651 - accuracy: 0.8354 - val_loss: 0.3068 - val_accuracy: 0.7069\n",
+      "Epoch 7/50\n",
+      "93/93 [==============================] - 1s 12ms/step - loss: 0.2485 - accuracy: 0.8293 - val_loss: 0.2192 - val_accuracy: 0.7533\n",
+      "Epoch 8/50\n",
+      "93/93 [==============================] - 1s 12ms/step - loss: 0.2232 - accuracy: 0.7961 - val_loss: 0.1931 - val_accuracy: 0.8455\n",
+      "Epoch 9/50\n",
+      "93/93 [==============================] - 1s 12ms/step - loss: 0.2169 - accuracy: 0.8452 - val_loss: 0.2266 - val_accuracy: 0.7912\n",
+      "Epoch 10/50\n",
+      "93/93 [==============================] - 1s 12ms/step - loss: 0.2100 - accuracy: 0.8279 - val_loss: 0.1926 - val_accuracy: 0.8471\n",
+      "Epoch 11/50\n",
+      "93/93 [==============================] - 1s 12ms/step - loss: 0.1987 - accuracy: 0.8347 - val_loss: 0.1942 - val_accuracy: 0.8448\n",
+      "Epoch 12/50\n",
+      "93/93 [==============================] - 1s 12ms/step - loss: 0.1966 - accuracy: 0.8496 - val_loss: 0.2115 - val_accuracy: 0.8038\n",
+      "Epoch 13/50\n",
+      "93/93 [==============================] - 1s 12ms/step - loss: 0.1875 - accuracy: 0.8418 - val_loss: 0.1822 - val_accuracy: 0.8479\n",
+      "Epoch 14/50\n",
+      "93/93 [==============================] - 1s 12ms/step - loss: 0.1879 - accuracy: 0.8570 - val_loss: 0.2256 - val_accuracy: 0.8022\n",
+      "Epoch 15/50\n",
+      "93/93 [==============================] - 1s 13ms/step - loss: 0.1889 - accuracy: 0.8462 - val_loss: 0.1923 - val_accuracy: 0.7116\n",
+      "Epoch 16/50\n",
+      "93/93 [==============================] - 1s 12ms/step - loss: 0.1929 - accuracy: 0.8232 - val_loss: 0.1838 - val_accuracy: 0.8164\n",
+      "Epoch 17/50\n",
+      "93/93 [==============================] - 1s 14ms/step - loss: 0.2001 - accuracy: 0.8414 - val_loss: 0.1924 - val_accuracy: 0.8258\n",
+      "Epoch 18/50\n",
+      "93/93 [==============================] - 1s 15ms/step - loss: 0.1888 - accuracy: 0.8533 - val_loss: 0.2293 - val_accuracy: 0.8645\n",
+      "Epoch 19/50\n",
+      "93/93 [==============================] - 1s 14ms/step - loss: 0.1938 - accuracy: 0.8611 - val_loss: 0.1876 - val_accuracy: 0.8842\n",
+      "Epoch 20/50\n",
+      "93/93 [==============================] - 1s 14ms/step - loss: 0.1770 - accuracy: 0.8587 - val_loss: 0.1929 - val_accuracy: 0.8597\n",
+      "Epoch 21/50\n",
+      "93/93 [==============================] - 1s 12ms/step - loss: 0.1827 - accuracy: 0.8550 - val_loss: 0.1870 - val_accuracy: 0.8487\n",
+      "Epoch 22/50\n",
+      "93/93 [==============================] - 1s 13ms/step - loss: 0.1805 - accuracy: 0.8364 - val_loss: 0.1812 - val_accuracy: 0.8645\n",
+      "Epoch 23/50\n",
+      "93/93 [==============================] - 1s 13ms/step - loss: 0.1771 - accuracy: 0.8414 - val_loss: 0.1790 - val_accuracy: 0.7920\n",
+      "Epoch 24/50\n",
+      "93/93 [==============================] - 1s 13ms/step - loss: 0.1813 - accuracy: 0.8256 - val_loss: 0.1837 - val_accuracy: 0.8692\n",
+      "Epoch 25/50\n",
+      "93/93 [==============================] - 1s 14ms/step - loss: 0.1741 - accuracy: 0.8597 - val_loss: 0.2147 - val_accuracy: 0.7872\n",
+      "Epoch 26/50\n",
+      "93/93 [==============================] - 1s 12ms/step - loss: 0.1784 - accuracy: 0.8570 - val_loss: 0.1867 - val_accuracy: 0.8826\n",
+      "Epoch 27/50\n",
+      "93/93 [==============================] - 1s 13ms/step - loss: 0.1730 - accuracy: 0.8627 - val_loss: 0.1885 - val_accuracy: 0.8613\n",
+      "Epoch 28/50\n",
+      "93/93 [==============================] - 1s 15ms/step - loss: 0.1809 - accuracy: 0.8316 - val_loss: 0.1856 - val_accuracy: 0.8629\n",
+      "Epoch 29/50\n",
+      "93/93 [==============================] - 1s 13ms/step - loss: 0.1730 - accuracy: 0.8502 - val_loss: 0.1695 - val_accuracy: 0.8684\n",
+      "Epoch 30/50\n",
+      "93/93 [==============================] - 1s 14ms/step - loss: 0.1738 - accuracy: 0.8560 - val_loss: 0.1747 - val_accuracy: 0.8534\n",
+      "Epoch 31/50\n",
+      "93/93 [==============================] - 2s 17ms/step - loss: 0.1724 - accuracy: 0.8644 - val_loss: 0.1799 - val_accuracy: 0.7376\n",
+      "Epoch 32/50\n",
+      "93/93 [==============================] - 1s 12ms/step - loss: 0.1771 - accuracy: 0.8398 - val_loss: 0.1719 - val_accuracy: 0.8526\n",
+      "Epoch 33/50\n",
+      "93/93 [==============================] - 1s 12ms/step - loss: 0.1746 - accuracy: 0.8242 - val_loss: 0.1735 - val_accuracy: 0.8353\n",
+      "Epoch 34/50\n",
+      "93/93 [==============================] - 1s 12ms/step - loss: 0.1825 - accuracy: 0.8729 - val_loss: 0.2056 - val_accuracy: 0.8140\n",
+      "Epoch 35/50\n",
+      "93/93 [==============================] - 1s 12ms/step - loss: 0.1943 - accuracy: 0.8621 - val_loss: 0.1817 - val_accuracy: 0.8471\n",
+      "Epoch 36/50\n",
+      "93/93 [==============================] - 1s 12ms/step - loss: 0.1777 - accuracy: 0.8489 - val_loss: 0.1931 - val_accuracy: 0.8842\n",
+      "Epoch 37/50\n",
+      "93/93 [==============================] - 1s 13ms/step - loss: 0.1796 - accuracy: 0.8570 - val_loss: 0.1693 - val_accuracy: 0.8700\n",
+      "Epoch 38/50\n",
+      "93/93 [==============================] - 1s 12ms/step - loss: 0.1804 - accuracy: 0.8567 - val_loss: 0.1821 - val_accuracy: 0.7707\n",
+      "Epoch 39/50\n",
+      "93/93 [==============================] - 1s 13ms/step - loss: 0.1791 - accuracy: 0.8114 - val_loss: 0.1786 - val_accuracy: 0.8660\n",
+      "Epoch 40/50\n",
+      "93/93 [==============================] - 1s 12ms/step - loss: 0.1817 - accuracy: 0.8685 - val_loss: 0.2002 - val_accuracy: 0.7888\n",
+      "Epoch 41/50\n",
+      "93/93 [==============================] - 1s 12ms/step - loss: 0.1808 - accuracy: 0.8398 - val_loss: 0.1697 - val_accuracy: 0.8668\n",
+      "Epoch 42/50\n",
+      "93/93 [==============================] - 1s 13ms/step - loss: 0.1720 - accuracy: 0.8604 - val_loss: 0.1884 - val_accuracy: 0.8306\n",
+      "Epoch 43/50\n",
+      "93/93 [==============================] - 1s 13ms/step - loss: 0.1719 - accuracy: 0.8780 - val_loss: 0.1726 - val_accuracy: 0.8708\n",
+      "Epoch 44/50\n",
+      "93/93 [==============================] - 1s 12ms/step - loss: 0.1712 - accuracy: 0.8492 - val_loss: 0.1727 - val_accuracy: 0.8865\n",
+      "Epoch 45/50\n",
+      "93/93 [==============================] - 1s 13ms/step - loss: 0.1825 - accuracy: 0.8438 - val_loss: 0.1711 - val_accuracy: 0.8597\n",
+      "Epoch 46/50\n",
+      "93/93 [==============================] - 1s 14ms/step - loss: 0.1796 - accuracy: 0.8732 - val_loss: 0.1848 - val_accuracy: 0.8652\n",
+      "Epoch 47/50\n",
+      "93/93 [==============================] - 1s 12ms/step - loss: 0.1734 - accuracy: 0.8584 - val_loss: 0.1713 - val_accuracy: 0.7857\n",
+      "Epoch 48/50\n",
+      "93/93 [==============================] - 1s 12ms/step - loss: 0.1707 - accuracy: 0.8773 - val_loss: 0.1732 - val_accuracy: 0.8747\n",
+      "Epoch 49/50\n",
+      "93/93 [==============================] - 1s 13ms/step - loss: 0.1753 - accuracy: 0.8560 - val_loss: 0.1710 - val_accuracy: 0.8857\n",
+      "Epoch 50/50\n",
+      "93/93 [==============================] - 1s 12ms/step - loss: 0.1724 - accuracy: 0.8725 - val_loss: 0.1715 - val_accuracy: 0.8936\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x25f14e0edc0>"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model = Sequential()\n",
     "\n",
@@ -4779,9 +4896,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 73.68 %\n"
+     ]
+    }
+   ],
    "source": [
     "y_pred = model.predict(X_test)\n",
     "# round probabilities to class labels\n",
@@ -4794,9 +4919,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., 0., 1.]], dtype=float32)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y_pred = model.predict([[25, 83, 21, 1001, 0.16, 3, 6, 52]])\n",
     "y_pred = y_pred.round()\n",
@@ -4805,7 +4941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4814,9 +4950,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([0.0, 0.0, 0.0, 0.0, 1.0], [1.0, 1.0, 0.0, 0.0, 1.0])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data = list(X_train.iloc[0].values)\n",
     "y_pred = model.predict([data])\n",
@@ -4826,11 +4973,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "10001 => 17  || 11001 => 25 || 10011"
+    "# 10001 => 17  || 11001 => 25 || 10011"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://www.youtube.com/watch?v=265-t5HxOR4\n",
+    "# https://www.youtube.com/watch?v=YyOuDi-zSiI\n",
+    "# https://www.youtube.com/watch?v=Nurf4gEu3gc\n",
+    "# https://www.youtube.com/watch?v=DkCF5xb0840\n",
+    "# https://kgptalkie.com/multi-label-text-classification-on-stack-overflow-tag-prediction/\n",
+    "# https://www.analyticsvidhya.com/blog/2017/08/introduction-to-multi-label-classification/\n",
+    "# Binary relevance | https://www.youtube.com/watch?v=vnObmjMWVd0\n",
+    "# Classifier chains \n",
+    "# Label powerset"
    ]
   },
   {
@@ -4839,9 +5003,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Binary relevance\n",
-    "Classifier chains\n",
-    "Label powerset"
+    "# https://arxiv.org/abs/1307.1769#:~:text=Ensemble%20methods%20have%20been%20shown,selected%20subset%20of%20k%20labels.\n",
+    "# https://arxiv.org/ftp/arxiv/papers/1307/1307.1769.pdf\n",
+    "# https://towardsdatascience.com/journey-to-the-center-of-multi-label-classification-384c40229bff\n",
+    "# https://www.analyticsvidhya.com/blog/2017/08/introduction-to-multi-label-classification/\n",
+    "# https://link.springer.com/chapter/10.1007/978-3-540-74958-5_38\n",
+    "# https://www.sciencedirect.com/science/article/abs/pii/S095741741400356X\n",
+    "# https://www.researchgate.net/publication/320960230_Binary_relevance_for_multi-label_learning_an_overview\n",
+    "# https://www.analyticsvidhya.com/blog/2017/08/introduction-to-multi-label-classification/\n",
+    "# https://www.youtube.com/watch?v=Nurf4gEu3gc\n",
+    "# https://www.youtube.com/watch?v=xyBUrk8CKGM&list=PLPN-43XehstOjGY6vM6nBpSggHoAv9hkR&index=66\n"
    ]
   }
  ],
