--- a/Project POMO/data scraping/Multi-Label Model Building.ipynb
+++ b/Project POMO/data scraping/Multi-Label Model Building.ipynb
@@ -2,8 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "ccee3abb",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +55,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9df45924",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +419,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ff541c72",
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +437,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "76d976cd",
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +499,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "970df0f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,8 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "8b34e6e4",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,8 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "a11f8dc3",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +623,7 @@
        "422              35  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,8 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "4e6de6a4",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +706,7 @@
        "422              0                           0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,8 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "75f0bdfd",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -751,8 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "2b27715a",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,8 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "75896aed",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,8 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "90b14eee",
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -855,17 +843,16 @@
       " samples avg       0.29      0.28      0.27       926\n",
       "\n",
       "File saved : MultiLabelModel_lr_Classifier.pkl\n",
-      "data : {'Accuracy': 72.42, 'Loss': 27.58, 'Hamming_loss': 7.38, 'Model_name': 'lr_Classifier', 'Filename': 'MultiLabelModel_lr_Classifier.pkl'}\n",
-      "Model : knn_Classifier\n"
+      "data : {'Accuracy': 72.42, 'Loss': 27.58, 'Hamming_loss': 7.38, 'Model_name': 'lr_Classifier', 'Filename': 'MultiLabelModel_lr_Classifier.pkl'}\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\users\\kiran\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
+      "c:\\users\\munge\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "c:\\users\\kiran\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in samples with no true labels. Use `zero_division` parameter to control this behavior.\n",
+      "c:\\users\\munge\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in samples with no true labels. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, msg_start, len(result))\n"
      ]
     },
@@ -873,9 +860,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy_score: 84.16 %\n",
-      "Loss: 15.84 %\n",
-      "Hamming_loss: 3.97 %\n",
+      "Model : knn_Classifier\n",
+      "Accuracy_score: 84.24 %\n",
+      "Loss: 15.76 %\n",
+      "Hamming_loss: 3.96 %\n",
       "Classification_report:\n",
       "               precision    recall  f1-score   support\n",
       "\n",
@@ -888,27 +876,11 @@
       "   micro avg       0.87      0.86      0.86       926\n",
       "   macro avg       0.88      0.84      0.85       926\n",
       "weighted avg       0.87      0.86      0.86       926\n",
-      " samples avg       0.34      0.34      0.34       926\n",
+      " samples avg       0.34      0.35      0.34       926\n",
       "\n",
       "File saved : MultiLabelModel_knn_Classifier.pkl\n",
-      "data : {'Accuracy': 84.16, 'Loss': 15.84, 'Hamming_loss': 3.97, 'Model_name': 'knn_Classifier', 'Filename': 'MultiLabelModel_knn_Classifier.pkl'}\n",
-      "Model : nb_Classifier\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\users\\kiran\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "c:\\users\\kiran\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in samples with no true labels. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "data : {'Accuracy': 84.24, 'Loss': 15.76, 'Hamming_loss': 3.96, 'Model_name': 'knn_Classifier', 'Filename': 'MultiLabelModel_knn_Classifier.pkl'}\n",
+      "Model : nb_Classifier\n",
       "Accuracy_score: 62.57 %\n",
       "Loss: 37.43 %\n",
       "Hamming_loss: 14.56 %\n",
@@ -935,9 +907,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\users\\kiran\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
+      "c:\\users\\munge\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "c:\\users\\kiran\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in samples with no true labels. Use `zero_division` parameter to control this behavior.\n",
+      "c:\\users\\munge\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in samples with no true labels. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "c:\\users\\munge\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "c:\\users\\munge\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in samples with no true labels. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, msg_start, len(result))\n"
      ]
     },
@@ -964,23 +940,7 @@
       "\n",
       "File saved : MultiLabelModel_svm_Classifier.pkl\n",
       "data : {'Accuracy': 78.57, 'Loss': 21.43, 'Hamming_loss': 5.99, 'Model_name': 'svm_Classifier', 'Filename': 'MultiLabelModel_svm_Classifier.pkl'}\n",
-      "Model : dt_Classifier\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\users\\kiran\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "c:\\users\\kiran\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in samples with no true labels. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Model : dt_Classifier\n",
       "Accuracy_score: 92.91 %\n",
       "Loss: 7.09 %\n",
       "Hamming_loss: 1.58 %\n",
@@ -1007,9 +967,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\users\\kiran\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
+      "c:\\users\\munge\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "c:\\users\\kiran\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in samples with no true labels. Use `zero_division` parameter to control this behavior.\n",
+      "c:\\users\\munge\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in samples with no true labels. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "c:\\users\\munge\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "c:\\users\\munge\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in samples with no true labels. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, msg_start, len(result))\n"
      ]
     },
@@ -1035,16 +999,17 @@
       " samples avg       0.41      0.41      0.41       926\n",
       "\n",
       "File saved : MultiLabelModel_rf_Classifier.pkl\n",
-      "data : {'Accuracy': 95.82, 'Loss': 4.18, 'Hamming_loss': 0.88, 'Model_name': 'rf_Classifier', 'Filename': 'MultiLabelModel_rf_Classifier.pkl'}\n"
+      "data : {'Accuracy': 95.82, 'Loss': 4.18, 'Hamming_loss': 0.88, 'Model_name': 'rf_Classifier', 'Filename': 'MultiLabelModel_rf_Classifier.pkl'}\n",
+      "Model : gb_Classifier\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\users\\kiran\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
+      "c:\\users\\munge\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "c:\\users\\kiran\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in samples with no true labels. Use `zero_division` parameter to control this behavior.\n",
+      "c:\\users\\munge\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in samples with no true labels. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, msg_start, len(result))\n"
      ]
     },
@@ -1052,7 +1017,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model : gb_Classifier\n",
       "Accuracy_score: 95.74 %\n",
       "Loss: 4.26 %\n",
       "Hamming_loss: 0.99 %\n",
@@ -1071,16 +1035,17 @@
       " samples avg       0.40      0.41      0.40       926\n",
       "\n",
       "File saved : MultiLabelModel_gb_Classifier.pkl\n",
-      "data : {'Accuracy': 95.74, 'Loss': 4.26, 'Hamming_loss': 0.99, 'Model_name': 'gb_Classifier', 'Filename': 'MultiLabelModel_gb_Classifier.pkl'}\n"
+      "data : {'Accuracy': 95.74, 'Loss': 4.26, 'Hamming_loss': 0.99, 'Model_name': 'gb_Classifier', 'Filename': 'MultiLabelModel_gb_Classifier.pkl'}\n",
+      "Model : ab_Classifier\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\users\\kiran\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
+      "c:\\users\\munge\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "c:\\users\\kiran\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in samples with no true labels. Use `zero_division` parameter to control this behavior.\n",
+      "c:\\users\\munge\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in samples with no true labels. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, msg_start, len(result))\n"
      ]
     },
@@ -1088,7 +1053,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model : ab_Classifier\n",
       "Accuracy_score: 95.35 %\n",
       "Loss: 4.65 %\n",
       "Hamming_loss: 1.06 %\n",
@@ -1114,9 +1078,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\users\\kiran\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
+      "c:\\users\\munge\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "c:\\users\\kiran\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in samples with no true labels. Use `zero_division` parameter to control this behavior.\n",
+      "c:\\users\\munge\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in samples with no true labels. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, msg_start, len(result))\n"
      ]
     },
@@ -1133,8 +1097,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Kiran\\AppData\\Local\\Temp\\ipykernel_14728\\2591022892.py:17: RuntimeWarning: divide by zero encountered in floor_divide\n",
-      "  y_pred_new = np.nan_to_num(and_of_pred // or_of_pred)\n"
+      "c:\\users\\munge\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\ipykernel_launcher.py:17: RuntimeWarning: divide by zero encountered in floor_divide\n"
      ]
     }
    ],
@@ -1144,8 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f8102b3d",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1157,7 +1119,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1171,7 +1133,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
